--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,11 @@
 [versions]
 # Build
 agp = "8.13.0"
+core = "1.7.0"
+gson-version = "2.10.1"
+hilt-android = "2.57.2"
+hilt-compiler = "2.57.2"
+kotlinx-coroutines-test = "1.7.3"
 ksp = "1.9.22-1.0.17"
 kotlin = "1.9.22"
 
@@ -16,6 +21,8 @@ compose-bom = "2024.02.01"
 datastore = "1.0.0"
 
 # Navigation
+mockk-android = "1.13.8"
+mockk-version = "1.13.8"
 navigation = "2.7.7"
 
 # Room
@@ -41,11 +48,27 @@ androidx-junit = "1.1.5"
 espresso = "3.5.1"
 mockito = "4.6.1"
 mockk = "1.13.5"
+room-compiler = "2.8.3"
+room-ktx = "2.8.3"
+room-runtime = "2.8.3"
+rules = "1.7.0"
 truth = "1.1.3"
+truth-version = "1.1.5"
 turbine = "0.12.1"
+
+gson = "2.13.2"
 
 [libraries]
 # Kotlin
+androidx-core = { module = "androidx.test:core", version.ref = "core" }
+androidx-room-compiler-v283 = { module = "androidx.room:room-compiler", version.ref = "room-compiler" }
+androidx-room-ktx-v283 = { module = "androidx.room:room-ktx", version.ref = "room-ktx" }
+androidx-room-runtime-v283 = { module = "androidx.room:room-runtime", version.ref = "room-runtime" }
+androidx-rules-v170 = { module = "androidx.test:rules", version.ref = "rules" }
+core-ktx = { module = "androidx.test:core-ktx", version.ref = "core" }
+gson-v2101 = { module = "com.google.code.gson:gson", version.ref = "gson-version" }
+hilt-android-v2572 = { module = "com.google.dagger:hilt-android", version.ref = "hilt-android" }
+hilt-compiler-v2572 = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt-compiler" }
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
 
 # Coroutines
@@ -88,8 +111,12 @@ hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt"
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
 hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hilt-navigation" }
 hilt-android-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hilt" }
+hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
 
 # Network
+kotlinx-coroutines-test-v173 = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx-coroutines-test" }
+mockk-android-v1138 = { module = "io.mockk:mockk-android", version.ref = "mockk-android" }
+mockk-v1138 = { module = "io.mockk:mockk", version.ref = "mockk-version" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
@@ -101,16 +128,19 @@ coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 junit = { module = "junit:junit", version.ref = "junit" }
 androidx-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-junit" }
 androidx-espresso = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
+mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
+mockk-android = { module = "io.mockk:mockk-android", version.ref = "mockk" }
 androidx-test-runner = { module = "androidx.test:runner", version = "1.5.2" }
 androidx-test-rules = { module = "androidx.test:rules", version = "1.5.0" }
 androidx-arch-core-testing = { module = "androidx.arch.core:core-testing", version = "2.2.0" }
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
-mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version = "4.0.0" }
-mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
-mockk-android = { module = "io.mockk:mockk-android", version.ref = "mockk" }
-mockwebserver = { module = "com.squareup.okhttp3:mockwebserver", version = "4.11.0" }
+mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version = "6.1.0" }
+mockwebserver = { module = "com.squareup.okhttp3:mockwebserver", version = "5.3.0" }
 truth = { module = "com.google.truth:truth", version.ref = "truth" }
+truth-v115 = { module = "com.google.truth:truth", version.ref = "truth-version" }
 turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
+
+gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 
 #update in future
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version = "1.6.1" }
