--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -58,6 +58,9 @@ turbine = "0.12.1"
 
 gson = "2.13.2"
 
+#Ktlint
+ktlint = "14.0.1"
+
 [libraries]
 # Kotlin
 androidx-core = { module = "androidx.test:core", version.ref = "core" }
@@ -153,3 +156,4 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
