--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -58,6 +58,9 @@ turbine = "0.12.1"
 
 gson = "2.13.2"
 
+
+splashscreen = "1.0.1"
+
 [libraries]
 # Kotlin
 androidx-core = { module = "androidx.test:core", version.ref = "core" }
@@ -145,6 +148,8 @@ gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 #update in future
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version = "1.6.1" }
 material = { module = "com.google.android.material:material", version = "1.11.0" }
+
+androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "splashscreen" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
