--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,8 +6,8 @@ gson-version = "2.10.1"
 hilt-android = "2.57.2"
 hilt-compiler = "2.57.2"
 kotlinx-coroutines-test = "1.7.3"
-ksp = "1.9.22-1.0.17"
-kotlin = "1.9.22"
+ksp = "2.0.20-1.0.25"
+kotlin = "2.0.20"
 
 # AndroidX
 core-ktx = "1.12.0"
@@ -157,3 +157,5 @@ kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+
